portfolio/css/style.css
body {
    color: rgb(34, 34, 34);
    font-family: 'Montserrat', sans-serif;
	margin-top: 100px;
	margin-bottom: 50px;
	background: none;
}

.full {
  background: url(../images/perfume.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

html, body { height: 100%; margin: 0; padding: 0; }

#main-container { 
    display: table;
    padding-left: 0;
    padding-right: 0;
    width: 100%;
    height: 100%;
    padding-top: 20px;
}

.main-content { 
    display: table-row;
    height: 100%;
}

.main-content-body { 
    display: table-cell;
    padding: 8%; 
}

.header, .footer { 
    padding: 10px 20px;
    background: #f7f7f7; 
}

h1 {
    font-size: 2em;
    font-weight: 700;
    letter-spacing: 0.1em;
}

p {
    font-size: 1.2em;
    letter-spacing: 0.1em;
}

.panel {
    background-color: rgba(0, 0, 0, 0);
    border: none;
}

.pink-link {
    color: rgb(255, 52, 108);
}

.pink-link:hover {
    text-decoration: none;
    transition: all 0.5s ease 0s;
}

/*Navbar Styles*/

.navbar-nav li a:hover {
    transition: all 0.5s ease 0s;
}

/*Index Page Styles*/

.contact-button {
    margin-top: 20px;
    rgb(34, 34, 34);
}

.btn {
    border: 0 none;
    font-weight: 700;
    letter-spacing: 1px;
    padding: 14px 24px;
    text-transform: uppercase;
}
 
.btn:focus, .btn:active:focus, .btn.active:focus {
    outline: 0 none;
}
 
.btn-primary {
    background: rgb(255, 52, 108);
    border: 2px solid;
    border-radius: 0px;
    color: #ffffff;
}
 
.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
    background: rgb(255, 150, 154);
    border: 2px solid rgb(255, 150, 154);
    transition: all 0.5s ease 0s;
}
 
.btn-primary:active, .btn-primary.active {
    background: #007299;
    box-shadow: none;
}

/*About Styles */

.about-img {
    border-radius: 3px;
}

/*Gallery Styles*/

.img-fluid {
    margin-top: 20px;
}

     -moz-transform: scale(0.8);
     -o-transform: scale(0.8);
     -webkit-transition-duration: 0.5s;
     -moz-transition-duration: 0.5s;
     -o-transition-duration: 0.5s;
 }

.thumbnails {
    margin-right: -15px;
}

.thumbnails a {
    float: left;
    margin-bottom: 25px;
    padding-right: 15px;
}
  
.thumbnails:hover img {
    opacity: .7;
    transition: all 0.5s ease 0s;
}

.thumbnails img {
    border-radius: 3px;
}

.thumbnails img:hover {
    opacity: 1;
    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
}

.gallery-img {
    width: 100%;
    display: block;
    height: auto;
}

/*Footer Styles */

.footer-panel {
    background-color: rgb(255, 52, 108);
    color: white;
    text-transform: uppercase;
}

#footer {
    bottom: 0;
}

#footer {
    margin-bottom: 5px;
}

